k8s-manifests/service1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - name: service1
        image: gcr.io/clever-spirit-417020/service1:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
