k8s-manifests/service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - name: service2
        image: gcr.io/clever-spirit-417020/service2:latest
        ports:
        - containerPort: 3001
