k8s-manifests/service2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  type: ClusterIP
  selector:
    app: service2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
