k8s-manifests/treafik copy.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2024-11-15T17:25:40Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/instance: traefik-default
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-33.0.0
  name: traefik
  namespace: default
  resourceVersion: "19720126"
  uid: d3b20970-6cca-40b3-84fd-209839d661a9
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 34.118.225.171
  clusterIPs:
  - 34.118.225.171
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    nodePort: 30698
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 31662
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-default
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 34.111.15.209
status:
  loadBalancer:
    ingress:
    - ip: 35.187.3.244
      ipMode: VIP
